redirect to language depends from browser feedback gathering

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -41,3 +41,16 @@ other = "Offer an improvement"
 other = "Create project issue"
 [post_posts_in]
 other = "Posts in"
+
+[feedback_title]
+other = "Feedback"
+[feedback_question]
+other = "Was this page helpful?"
+[feedback_answer_yes]
+other = "Yes"
+[feedback_answer_no]
+other = "No"
+[feedback_response_yes]
+other = "Glad to hear it :) Please <a href='https://github.com/adeo/lmru--tech/issues/new' target='_blank'>tell us</a> how we can improve."
+[feedback_response_no]
+other = "Sorry to hear that :( Please <a href='https://github.com/adeo/lmru--tech/issues/new' target='_blank'>tell us</a> how we can improve."
