--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -41,3 +41,17 @@ other = "Предложить улучшение"
 other = "Создать тикет"
 [post_posts_in]
 other = "Страниц в"
+
+[feedback_title]
+other = "Обратная связь"
+[feedback_question]
+other = "Была ли эта страница полезной?"
+[feedback_answer_yes]
+other = "Да"
+[feedback_answer_no]
+other = "Нет"
+
+[feedback_response_yes]
+other = "Спасибо за тёплые слова :) <a href='https://github.com/adeo/lmru--tech/issues/new' target='_blank'>Подскажи</a>, как можно сделать ещё лучше."
+[feedback_response_no]
+other = "Печально это слышать :( <a href='https://github.com/adeo/lmru--tech/issues/new' target='_blank'>Подскажи</a>, как можно это исправить."
