--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -45,12 +45,12 @@ other = "Posts in"
 [feedback_title]
 other = "Feedback"
 [feedback_question]
-other = "Was this page helpful?"
+other = "Did you find an answer to your question?"
 [feedback_answer_yes]
 other = "Yes"
 [feedback_answer_no]
 other = "No"
 [feedback_response_yes]
-other = "Glad to hear it :) Please <a href='https://github.com/adeo/lmru--tech/issues/new' target='_blank'>tell us</a> how we can improve."
+other = "Great :) Please <a href='https://github.com/adeo/lmru--tech/issues/new' target='_blank'>tell us</a> how we can improve."
 [feedback_response_no]
-other = "Sorry to hear that :( Please <a href='https://github.com/adeo/lmru--tech/issues/new' target='_blank'>tell us</a> how we can improve."
+other = "Sorry to hear that :( Please <a href='https://github.com/adeo/lmru--tech/issues/new' target='_blank'>tell us</a> the question you had."
