--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -58,3 +58,15 @@ other = "Печально это слышать :( <a href='https://github.com/a
 other = "Спасибо за фидбек!"
 [feedback_emotion]
 other = "Соберём самые полезные и бесполезные ценности. Ты также можешь <a href='https://github.com/adeo/lmru--tech/issues/new?title='>предложить исправление</a>."
+[values_people]
+other = "Люди"
+[values_people_desc]
+other = "Люди в сердце компании."
+[values_tech]
+other = "Технологии"
+[values_tech_desc]
+other = "Постоянно челленджим выбор технологий."
+[values_arch]
+other = "Архитектура"
+[values_arch_desc]
+other = "Строим долгосрочные решения и боремся техническим долгом."
